Remove overridden config for maven-compiler-plugin